tests/jit/pass/func_alloc.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

val type foobar {
    x: int32,
    y: int32
}

func alloc_thing() ret foobar {
    return alloc foobar{
        x:3,
        y:3
    };
}

func main() ret int64 {
    let thing = alloc_thing();
    return (thing.x - thing.y) as int64;
}
