tests/jit/fail/local_func_outofscope.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

func do_math_for_me() ret int64 {
    func do_add_for_me(x: int64, y: int64) ret int64 {
        return x + y;
    };
    return do_add_for_me(3,4);
}

func main() ret int64 {
    let n = do_math_for_me();
    let m = do_add_for_me(4,3);
    return n-m;
}

